# thumbnails

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: publish_docker_image.yaml
src/: thumnails.py
tests/: .gitignore  test_thumnails.py
